# scaffoldfitter

./: pyproject.toml  setup.py
.github/workflows/: deploy.yaml  run_tests.yaml
docs/: conf.py  index.rst
src/scaffoldfitter/: fitter.py  fitterjson.py  fitterstep.py  fitterstepalign.py  fitterstepconfig.py  fitterstepfit.py
tests/: test_fit2d.py  test_fitcube.py  test_general.py
tests/resources/: breast_data.exf  breast_plate.exf  nerve_path_data.exf  nerve_trunk_model.exf  square.exf  square_error_data.exf  two_cubes_ellipsoid_data_regular.exf  two_cubes_ellipsoid_data_regular_markers.exf  two_cubes_hermite_nocross_groups.exf  two_element_cube.exf
